[package]
name = "wasm-image-filter"
version = "0.1.0"
authors = ["shilim <1251314045@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
serde = {version="1.0.202",features = ["derive"]}
ts-rs = "8.1.0"
tsify = "0.4.5"
wasm-bindgen = "0.2.75"
web-sys = {version="0.3.69",features=['ImageData']}
